<resources>
    <string name="app_name" translatable="false">RecipeApp</string>
    <string name="Category3">Recipe for disaster</string>
    <string name="Category4">Christmas</string>
    <string name="Category5">Saffron</string>
    <string name="Category6">Saffron free</string>
    <string name="Category2">Recipe for love </string>
    <string name="NameHintRecipe">Name of recipe</string>
    <string name="IngredientsHintRecipe">Ingredients</string>
    <string name="InstructionsHintRecipe">Instructions</string>
    <string name="SaveButton">Save</string>
    <string name="RecipeCategories">Recipe Categories</string>
    <string name="Category1">Baking</string>
    <string name="NameRead">Title</string>
    <string name="IngredientsRead">Ingredients</string>
    <string name="InstructionsRead">Instructions</string>
    <string name="AddRecipe">Add Recipe</string>
    <string name="IngredientsHeader">Ingredients</string>
    <string name="InstructionsHeader">Instructions</string>
    <string name="ToastAddFeedback">You need to add a title and ingredients</string>
    <string name="ToastSaveFeedback">Could not save recipe</string>
</resources>